--- a/dwca_config/eml_metadata/eml_phytoplankton_ifcb.yaml
+++ b/dwca_config/eml_metadata/eml_phytoplankton_ifcb.yaml
@@ -11,7 +11,7 @@ additionalMetadata:
                 SHARK - Regional marine environmental monitoring, recipient control and monitoring projects of Phytoplankton in Sweden since 1985.
 
 dataset:
-    title: SHARK - Phyto- and Microzooplankton Data from Imaging FlowCytobot (IFCB) in Sweden
+    title: SHARK - Phyto- and Microzooplankton Data from Imaging FlowCytobot (IFCB) from Sweden
 
     abstract:
         para:
