--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -214,7 +214,9 @@ dwcaEventContent:
           #         -   dynamicKey: SizeClassReferenceList
           #             sourceKey: size_class_ref_list
           sampleSizeValue:
-              sourceKey: sampled_volume_l
+              sourceKeyList: 
+                  - sampled_volume_l
+                  - sampled_volume_ml
           sampleSizeUnit:
               text: Litres
           samplingEffort:
