--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -219,6 +219,8 @@ dwcaEventContent:
                   - sampled_volume_ml
           sampleSizeUnit:
               text: Litres
+          sampleSizeUnit_IFCB:
+              text: Millilitres
           samplingEffort:
               sourceKey:
           eventDate:
