--- a/dwca_config/dwca_phytoplankton_ifcb.yaml
+++ b/dwca_config/dwca_phytoplankton_ifcb.yaml
@@ -39,7 +39,8 @@ fieldMapping:
     directory:
         dwca_config/field_mapping
     files:
-        - dwca_terms_event.yaml
+        -   - dwca_terms_event.yaml
+            - _IFCB
         - dwca_terms_occurrence.yaml
         - dwca_terms_emof.yaml
 
