Get basisOfrecord with suffix
Remove the need for hard-coded fix.

Part of #4

--- a/dwca_config/field_mapping/dwca_terms_occurrence.yaml
+++ b/dwca_config/field_mapping/dwca_terms_occurrence.yaml
@@ -110,6 +110,8 @@ dwcaOccurrenceContent:
               sourceKey: worms_genus
           basisOfRecord:
               text: MaterialSample
+          basisOfRecord_IFCB:
+              text: MachineObservation
           recordedBy:
               sourceKey: taxonomist
           occurrenceRemarks:
