--- a/dwca_config/dwca_phytoplankton_ifcb.yaml
+++ b/dwca_config/dwca_phytoplankton_ifcb.yaml
@@ -42,7 +42,8 @@ fieldMapping:
         -   - dwca_terms_event.yaml
             - _IFCB
         - dwca_terms_occurrence.yaml
-        - dwca_terms_emof.yaml
+        -   - dwca_terms_emof.yaml
+            - _IFCB
 
 taxaWorms:
     directory:
