--- a/dwca_config/field_mapping/dwca_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_terms_emof.yaml
@@ -47,6 +47,8 @@ dwcaEmofContent:
         sourceKeyList:
           - sample_date
           - visit_date
+      measurementDeterminedDate_IFCB:
+        sourceKey:
       measurementDeterminedBy:
         sourceKey:
       measurementMethod:
@@ -81,7 +83,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: monitoring_purpose_code
       - measurementType: Imaging instrument name
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/NMSPINST/"
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/NMANINST/"
         measurementUnit: Not applicable
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: image_instrument_name
@@ -116,6 +118,8 @@ dwcaEmofContent:
         sourceKeyList:
           - sample_date
           - visit_date
+      measurementDeterminedDate_IFCB:
+        sourceKey:
       measurementDeterminedBy:
         sourceKey:
       measurementMethod:
@@ -303,7 +307,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX/"
         sourceKey: training_set_annotated_by
       - measurementType: Imaging instrument identification number
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/SERNUMZZ/"
         measurementUnit: Not applicable
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX/"
         sourceKey: instrument_number
@@ -350,6 +354,8 @@ dwcaEmofContent:
         sourceKeyList:
           - sample_date
           - visit_date
+      measurementDeterminedDate_IFCB:
+        sourceKey:
       measurementDeterminedBy:
         sourceKey:
       measurementMethod:
@@ -467,7 +473,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UGPL/"
         sourceKey: chl_flu2_ug_l_fb
       - measurementType: Colored dissolved organic matter
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/OG1/current/CDOM/"
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/CCOMD003/"
         measurementUnit: Parts per billion
         measurementUnitID: "https://vocab.nerc.ac.uk/collection/P06/current/UPPB/"
         sourceKey: cdom_ppb_fb
@@ -481,18 +487,18 @@ dwcaEmofContent:
         measurementUnit: Micrograms per litre
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UGPL/"
         sourceKey: phycy_ug_l_fb
-      - measurementType: Waterflow FerryBox
-        measurementTypeID:
+      - measurementType: Flow of water in the FerryBox flow-through system
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/INFLTF01/"
         measurementUnit: Litres per minute
         measurementUnitID: "https://vocab.nerc.ac.uk/collection/P06/current/ULPM/"
         sourceKey: waterflow_l_min_fb
       - measurementType: Turbidity 
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P25/current/TURB/"
+        measurementTypeID: "https://vocab.nerc.ac.uk/collection/P01/current/TURBXXXX/"
         measurementUnit: Nephelometric turbidity units
         measurementUnitID: "https://vocab.nerc.ac.uk/collection/P06/current/USTU/"
         sourceKey: turb_ntu_fb
       - measurementType: Partial pressure carbon dioxide
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/PCO2XXXX/"
         measurementUnit: Parts per million
         measurementUnitID: "https://vocab.nerc.ac.uk/collection/P06/current/UPPM/"
         sourceKey: pco2_ppm_fb
@@ -507,12 +513,12 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UUUU/"
         sourceKey: psal_psu_fb
       - measurementType: Oxygen saturation
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P09/current/OSAT/"
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/OXYSZZ01/"
         measurementUnit: Percent
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UPCT/"
         sourceKey: osat_percent_fb
       - measurementType: Dissolved oxygen
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P09/current/DOX1/"
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/DOXYZZXX/"
         measurementUnit: Millilitres per litre
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMLL/"
         sourceKey: doxy_ml_l_fb
@@ -522,7 +528,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: classifier_created_by
       - measurementType: Quality flag
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/L27/current/SMHI_QC/"
         measurementUnit: Not applicable
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: quality_flag
@@ -559,6 +565,8 @@ dwcaEmofContent:
         sourceKey:
       measurementDeterminedDate:
         sourceKey: analysis_date
+      measurementDeterminedDate_IFCB:
+        sourceKey:
       measurementDeterminedBy:
         sourceKey: analysed_by
       measurementMethod:
@@ -638,7 +646,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: size_class_ref_list_code
       - measurementType: Trophic type
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P21/current/MS10997/"
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/CTROPH01/"
         measurementUnit: Not applicable
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: trophic_type_code
@@ -745,11 +753,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
         sourceKey: finding_circumstances
 
-      - measurementType: Classifier taxon name
-        measurementTypeID:
-        measurementUnit: Not applicable
-        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX"
-        sourceKey: classifier_taxon_name
+
       - measurementType: Classifier F1 score model accuracy
         measurementTypeID:
         measurementUnit: Percent
