--- a/dwca_config/field_mapping/dwca_keys.yaml
+++ b/dwca_config/field_mapping/dwca_keys.yaml
@@ -21,6 +21,8 @@ eventTypeKeys:
         parentEventType: 
         keyName: sampling_event_key
         eventKeyName: 
+        deliveryTypeValueField:
+            Plankton Imaging: sample_id
         keyPrefix: EVENT-
         keyFields:
             - station_name
@@ -35,6 +37,8 @@ eventTypeKeys:
         parentEventType: sampling_event
         keyName: sample_key
         eventKeyName: sampling_event_key
+        deliveryTypeValueField:
+            Plankton Imaging: shark_sample_md5
         keyPrefix: SAMPLE-
         keyFields: 
             - shark_sample_id_md5
@@ -50,6 +54,8 @@ eventTypeKeys:
     -   eventType: occurrence
         keyName: occurrence_key
         eventKeyName: sample_key
+        deliveryTypeValueField:
+            Plankton Imaging: occurrence_id
         keyPrefix: TAXA-
         keyFields:
             - shark_sample_id_md5
