--- a/dwca_config/dwca_epibenthos_nat.yaml
+++ b/dwca_config/dwca_epibenthos_nat.yaml
@@ -72,6 +72,12 @@ filters:
         - filters.txt
         - filters_epibenthos_nat.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
