--- a/dwca_config/dwca_epibenthos_reg_recip_proj.yaml
+++ b/dwca_config/dwca_epibenthos_reg_recip_proj.yaml
@@ -68,6 +68,12 @@ filters:
         - filters.txt
         - filters_epibenthos_reg_recip_proj.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
