--- a/dwca_config/dwca_greyseal_nat.yaml
+++ b/dwca_config/dwca_greyseal_nat.yaml
@@ -64,6 +64,13 @@ filters:
         - filters.txt
         - filters_seal.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+        - transform_greyseal.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
