--- a/dwca_config/dwca_harbourseal_nat.yaml
+++ b/dwca_config/dwca_harbourseal_nat.yaml
@@ -65,6 +65,12 @@ filters:
         - filters.txt
         - filters_seal.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
