--- a/dwca_config/dwca_ices_phytobenthos_nat.yaml
+++ b/dwca_config/dwca_ices_phytobenthos_nat.yaml
@@ -75,6 +75,12 @@ filters:
        # - filters_epibenthos_nat.txt
         - filters_ices_phytobenthos.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 # metadataSourceFiles:
 #     directory:
 #         ../metadata/dcat_ap_se
