--- a/dwca_config/dwca_ices_zooplankton_nat.yaml
+++ b/dwca_config/dwca_ices_zooplankton_nat.yaml
@@ -69,5 +69,11 @@ filters:
         - filters_ices.txt
        # - filters_zooplankton_nat.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 
 
