--- a/dwca_config/dwca_phytoplankton_nat.yaml
+++ b/dwca_config/dwca_phytoplankton_nat.yaml
@@ -64,6 +64,12 @@ filters:
         - filters.txt
         - filters_phytoplankton_nat.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
