--- a/dwca_config/dwca_planktonimaging_ifcb.yaml
+++ b/dwca_config/dwca_planktonimaging_ifcb.yaml
@@ -67,6 +67,12 @@ filters:
         - filters.txt
         - filters_planktonimaging_ifcb.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
