--- a/dwca_config/dwca_physicalchemical_nat.yaml
+++ b/dwca_config/dwca_physicalchemical_nat.yaml
@@ -61,6 +61,12 @@ filters:
         - filters.txt
         - filters_physicalchemical.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
