--- a/dwca_config/dwca_picoplankton_nat.yaml
+++ b/dwca_config/dwca_picoplankton_nat.yaml
@@ -53,6 +53,12 @@ filters:
         - filters.txt
         - filters_picoplankton.txt
 
+transform:
+    directory:
+        dwca_config/transform
+    files:
+        - transform.yaml
+
 metadataSourceFiles:
     directory:
         ../metadata/dcat_ap_se
