--- a/data_in/resources/parameter_to_parameter_id.yaml
+++ b/data_in/resources/parameter_to_parameter_id.yaml
@@ -1,11 +1,11 @@
-Bacterial carbon production: "http://vocab.nerc.ac.uk/collection/P02/current/UPTH/"
-Bacterial growth: "https://vocab.nerc.ac.uk/collection/P02/current/GREF/"
-3H thymidine uptake: "http://vocab.nerc.ac.uk/collection/P09/current/UPTH/"
+Bacterial carbon production: "http://vocab.nerc.ac.uk/collection/P01/current/BPRDCVXX/"
+Bacterial growth: "http://vocab.nerc.ac.uk/collection/P02/current/GREF/"
+3H thymidine uptake: "http://vocab.nerc.ac.uk/collection/P01/current/UPTHXXXX/"
 Cell carbon content: "http://vocab.nerc.ac.uk/collection/P01/current/MAOCCB11/"
 Biovolume concentration: "http://vocab.nerc.ac.uk/collection/P01/current/CVOLUKNB/"
 Cell volume: "http://vocab.nerc.ac.uk/collection/P01/current/CVOLZZ01/"
-Air pressure: "http://vocab.nerc.ac.uk/collection/P02/current/CAPH/"
-Air temperature: "http://vocab.nerc.ac.uk/collection/OD1/current/AIRTEMP/"
+Air pressure: "http://vocab.nerc.ac.uk/collection/P01/current/CAPHZZ01/"
+Air temperature: "http://vocab.nerc.ac.uk/collection/P01/current/CTMPZZ01/"
 Temperature: "http://vocab.nerc.ac.uk/collection/P01/current/TEMPPR01/"
 Salinity: "http://vocab.nerc.ac.uk/collection/P01/current/PSLTZZ01/"
 Dry weight: "http://vocab.nerc.ac.uk/collection/P01/current/SPDWXX01/"
