--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,16 @@ dev = [
     "ruff>=0.11.0",
 ]
 
+[project.scripts]
+dwca-generator-cli = "darwincore.dwca_generator_cli:main"
+dwca-generator-main = "darwincore.dwca_generator_main:main"
+publish-to-yamr = "darwincore.metadataopendata.publish_to_yamr:main"
+put-metadatafile-to-yamr = "darwincore.metadataopendata.put-metadatafile-to-yamr:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [tool.ruff]
 line-length = 90
 indent-width = 4
